--- a/frontend/src/styles/feed.module.css
+++ b/frontend/src/styles/feed.module.css
@@ -18,6 +18,17 @@ textarea {
   font-family: 'Outfit', sans-serif;
 
 }
+.body{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
+  background-color: rgba(46, 46, 46, 0.582);
+
+}
 
 .pick_file {
   color: rgb(0, 0, 0);
@@ -72,7 +83,6 @@ textarea {
 
 .header{
   height: 8vh;
-  margin-bottom: 5px;
   background-color:#71caf3;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
   align-items: center;
@@ -125,57 +135,110 @@ margin: auto;
 
 .post_container {
   height: 65vh;
-  align-self: center;
-  justify-self: center;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 200px;
-  width:93%;
-  display: flex;
   flex-direction: column;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
-  background-color: #F28482;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(147, 164, 165, 0.2);
+  box-shadow: 0 8px 23px 0 rgba(85, 85, 85, 0.651);
+  background: #6e979ca6;
+  margin: auto;
+  padding: 20px;
 }
 
 
 .post_header{
-  margin-top: 100px;
    margin: 10px;
    display: flex;
-   width: 100%;
    color: white;
+   text-align: center;
+
 }
 .input_fields{
   display: flex;
   flex-direction: column;
+  text-align: center;
+
   
 }
 
 .post_input1 {
-  border: none;
-  background-color: rgb(235, 235, 235);
+  background-color: rgba(235, 235, 235, 0.63);
   width: 500px;
   height: 30px;
   color: rgb(0, 0, 0);
   outline: none;
   border-radius: 4px;
-  border: 2px solid rgb(255, 255, 255);
+  border: 1px solid rgba(172, 171, 171, 0.692);
   margin-top: 10px;
 
 }
 
 .post_input2 {
   border: none;
-  background-color: rgb(235, 235, 235);
+  background-color: rgba(235, 235, 235, 0.61);
   width: 500px;
   height: 100px;
   color: rgb(0, 0, 0);
   outline: none;
   border-radius: 4px;
-  border: 2px solid rgb(255, 255, 255);
+  border: 1px solid rgba(172, 171, 171, 0.616);
 }
+.comment_input {
+  background-color: rgba(235, 235, 235, 0.61);
+  width: 770px;
+  height: 27px;
+  color: rgb(0, 0, 0);
+  border:none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;  
+}
+.comment_button {
+  font-family: 'Outfit', sans-serif;
+  appearance: none;
+  background-color: #ffcd6f;
+border:none;
+outline: none;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 18px;
+  line-height: normal;
+  height: 30px;
+  width: 130px;
+  outline: none;
+  text-align: center;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  box-sizing: border-box;
 
 
+ 
+ 
+ }
+ .comment_button:hover {
+  color: #ffffff;
+  background-color: #5cbbd8;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+ }
+ 
+ .comment_button:active {
+  box-shadow: none;
+ }
+.comments{
+   width:900px;
+   min-height: 50px;
+   border: solid 1px rgba(128, 128, 128, 0.644);
+   border-bottom-left-radius: 5px;
+   border-bottom-right-radius: 5px;
+
+ }
 .delete {
   background: rgb(182, 55, 55);
   color: rgb(255, 255, 255);
@@ -211,12 +274,10 @@ margin: auto;
 
 
 .posts_container {
-  min-height: 35vh;
+  min-height: 300px;
   width: 900px;
   display: flex;
-  
   background-color: white;
-  border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.2);
   text-align: left;
@@ -236,28 +297,12 @@ margin: auto;
   grid-gap: 10px;
 }
 
-.preview_img_container {
-  width: 300px;
-  /* set width of image container */
-  height: 300px;
-  border-radius: 50%;
-  /* make image container circular */
-  overflow: hidden;
-  /* Add display flex to center image vertically */
-  align-items: center;
-  /* Center image vertically */
-  justify-content: center;
-  /* Center image horizontally */
-  margin-left: 20px;
-}
 
 .post_img_container {
-  width: 300px;
+  width: 100%;
   /* set width of image container */
-  height: 35vh;
+  height: 100%;
   /* set height of image container */
-  border-bottom-left-radius: 10px;
-
   overflow: hidden;
   display: flex;
   /* Add display flex to center image vertically */
@@ -271,7 +316,7 @@ margin: auto;
 
 .post_img_container img {
 
-  height: 100%;
+  height: 300px;
   width: 100%;
   object-fit: cover;
 }
@@ -323,7 +368,7 @@ margin: auto;
 
 .posts_header {
   height: 55px;
-  background-color: #F28482;
+  background-color:#71caf3;
   margin-top: 30px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
