--- a/frontend/src/styles/login.module.css
+++ b/frontend/src/styles/login.module.css
@@ -3,8 +3,15 @@ p{
 }
 
 .parent{
-  display: flex;
+  background-image: url('../../public/content/register.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 .arrow{
   position: absolute;
@@ -42,42 +49,28 @@ p{
 }
 .left{
  width: 30%;
- background: #ffffff;
- border-right: solid 4px #000000;
+ background: #ffffffe1;
+ border: solid 1px #929292;
  box-shadow: 200px 300px 300px 400px rgba(8, 8, 8, 0.863);
  backdrop-filter: blur(10px);
- -webkit-backdrop-filter: blur(10px);
- text-align: center;
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  box-shadow: 0 8px 23px 0 rgba(255, 255, 255, 0.2);
+padding: 10px;
+border-radius: 10px;
+
 
 }
 .left h1{
-  margin: 10;
+  margin: 0;
   font-size: 300%;
   color: #203ec5;
   text-align: center;
 
 }
-.right{
-  width: 70%;
-  height: 100vh;
-  background: black;
-}
-.image_container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
 
-.image_container img{
-  max-width: 150%;
-  max-height: 150%;
-  object-fit: cover;
-}
 .input {
-  max-width: 190px;
+  max-width: 200px;
   height: 44px;
   background-color: #05060f0a;
   border-radius: .5rem;
